dataset1235/2025-2/2947369575/users/2204111137/executions/3873599344_3788368433.log
== RUN (2025-08-20 23:11:41)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var ="Pedro"
input(var)
# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
PedroPedro
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
PedroPedro
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
PedroPedro
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
PedroPedro
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
PedroPedro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:14:56)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:14:49)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:12:04)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var ="Pedro"
input("var")
# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
varvar
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
varvar
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
varvar
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
varvar
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
varvar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:14:28)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:14:10)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:10:55)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Pedro
input(var)
# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Pedro
          ^^^^^
NameError: name 'Pedro' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Pedro
          ^^^^^
NameError: name 'Pedro' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Pedro
          ^^^^^
NameError: name 'Pedro' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Pedro
          ^^^^^
NameError: name 'Pedro' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Pedro
          ^^^^^
NameError: name 'Pedro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:11:32)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var ="Pedro"
input(var)
# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
PedroPedro
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
PedroPedro
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
PedroPedro
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
PedroPedro
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
PedroPedro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
